added books parsing; added list of books screen; added book view screen; added searching images if exist;

--- a/BooksSearchongDemo/Podfile
+++ b/BooksSearchongDemo/Podfile
@@ -8,6 +8,8 @@ target 'BooksSearchongDemo' do
   # Pods for BooksSearchongDemo
   pod 'Alamofire', '~> 5.0.0-rc.3'
   pod 'SnapKit', '~> 5.0.0'
+  pod 'SwiftyJSON', '~> 4.0'
+  pod 'Nuke'
 
   target 'BooksSearchongDemoTests' do
     inherit! :search_paths
